--- a/package.json
+++ b/package.json
@@ -5,23 +5,30 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc -b && vite build",
-    "preview": "vite preview"
+    "build": "vue-tsc && vite build",
+    "preview": "vite preview",
+    "test": "vitest",
+    "test:ui": "vitest --ui"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.12",
     "otpauth": "^9.4.1",
     "vue": "^3.5.18"
   },
   "devDependencies": {
-    "@tailwindcss/vite": "^4.1.12",
+    "@crxjs/vite-plugin": "^2.2.0",
+    "@tailwindcss/postcss": "^4.1.12",
     "@types/chrome": "^0.1.4",
     "@vitejs/plugin-vue": "^6.0.1",
+    "@vitest/ui": "^3.2.4",
     "@vue/tsconfig": "^0.7.0",
     "autoprefixer": "^10.4.21",
+    "jsdom": "^26.1.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.12",
     "typescript": "~5.8.3",
     "vite": "^7.1.2",
+    "vitest": "^3.2.4",
     "vue-tsc": "^3.0.5"
   }
 }
