--- a/public/manifest.json
+++ b/public/manifest.json
@@ -18,5 +18,8 @@
     "16": "icon.png",
     "48": "icon.png",
     "128": "icon.png"
+  },
+  "background": {
+    "service_worker": "src/background/background.ts"
   }
 }
