Add side panel support and refactor UI components
Extracted TOTP functionality into a shared component that can be used in both popup and side panel. Added side panel implementation with context menu support. Left-click on extension icon opens popup, right-click opens context menu with option to open side panel.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,7 +4,8 @@
   "version": "1.0.0",
   "description": "A simple TOTP generator extension.",
   "permissions": [
-    "storage"
+    "storage",
+    "sidePanel"
   ],
   "action": {
     "default_popup": "index.html",
@@ -21,5 +22,8 @@
   },
   "background": {
     "service_worker": "src/background/background.ts"
+  },
+  "side_panel": {
+    "default_path": "sidepanel.html"
   }
 }
