--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,29 @@
 {
   "manifest_version": 3,
-  "name": "TOTP Extension",
+  "name": "TOTP Authenticator",
   "version": "1.0.0",
-  "action": {
-    "default_popup": "popup.html",
-    "default_icon": "icon.png"
-  },
-  "background": {
-    "service_worker": "src/background/background.ts"
-  },
+  "description": "A simple TOTP generator extension.",
   "permissions": [
-    "storage"
+    "storage",
+    "sidePanel"
   ],
+  "action": {
+    "default_popup": "index.html",
+    "default_icon": {
+      "16": "icon.png",
+      "48": "icon.png",
+      "128": "icon.png"
+    }
+  },
   "icons": {
     "16": "icon.png",
     "48": "icon.png",
     "128": "icon.png"
+  },
+  "background": {
+    "service_worker": "src/background/background.ts"
+  },
+  "side_panel": {
+    "default_path": "sidepanel.html"
   }
 }
